# pyobs-sbig

./: .pre-commit-config.yaml  CMakeLists.txt  README.md  build.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pypi.yml  ruff.yml
docs/source/: conf.py  index.rst
pyobs_sbig/: __init__.py  gui.py  sbig6303e.py  sbigbasecamera.py  sbigcamera.py  sbigdriver.py  sbigfiltercamera.py  sbigtracker.py  sbigudrv.pxd  sbigudrv.pyx
pytel_sbig/: sbigcamera.py  sbigudrv.pxd  sbigudrv.pyx
src/pyobs_sbig/: __init__.py  gui.py  sbig6303e.py  sbigcamera.py  sbigfiltercamera.py  sbigudrv.pxd
