[project]
name = "pyobs-sbig"
version = "1.2.0"
description = "pyobs module for SBIG cameras"
authors = [{ name = "Tim-Oliver Husser", email = "thusser@uni-goettingen.de" }]
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "astropy>=7.0.1,<8",
    "numpy>=2.2.5,<3",
    "pyobs-core>=1,<2",
]

[dependency-groups]
dev = [
    "black>=25.1.0,<26",
    "pre-commit>=4.2.0,<5",
    "flake8>=7.3.0",
    "cython>=3.0.0,<4",
]

[tool.hatch.build.targets.sdist]
include = ["pyobs_sbig", "build.py"]

[tool.hatch.build.targets.wheel]
include = ["pyobs_sbig", "build.py"]

[build-system]
requires = ["hatchling", "hatch-build-scripts"]
build-backend = "hatchling.build"

[tool.black]
line-length = 120
target-version = ['py311']

[[tool.hatch.build.hooks.build-scripts.scripts]]
out_dir = "pyobs_sbig"
commands = ["python build.py"]
#artifacts = ["sbigudrv.cpython-311-x86_64-linux-gnu.so"]