[project]
name = "pyobs-sbig"
version = "1.3.0"
description = "pyobs module for SBIG cameras"
authors = [{ name = "Tim-Oliver Husser", email = "thusser@uni-goettingen.de" }]
requires-python = ">=3.11,<3.15"
license = "MIT"
dependencies = [
    "astropy>=7.0.1,<8",
    "numpy>=2.2.5,<3",
    "pyobs-core>=1,<2",
]

[project.optional-dependencies]
gui = [
    "qfitswidget>=0.13.1",
    "pyside6>=6.11.0",
    "qasync>=0.28.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0,<26",
    "pre-commit>=4.2.0,<5",
    "flake8>=7.3.0",
    "cython>=3.0.0,<4",
    "pyside6-stubs>=6.7.3.0",
]

[project.scripts]
sbig-gui = 'pyobs_sbig.gui:main'

[tool.setuptools]
py-modules = []

[tool.scikit-build]
wheel.packages = ["src/pyobs_sbig"]

[build-system]
requires = ["scikit_build_core>=0.12", "cython>=3.0", "cython-cmake", "numpy>=2.0"]
build-backend = "scikit_build_core.build"

[tool.black]
line-length = 120
target-version = ['py313']
