[project]
name = "pyobs-sbig"
version = "2.0.0.dev6"
description = "pyobs module for SBIG cameras"
authors = [{ name = "Tim-Oliver Husser", email = "thusser@uni-goettingen.de" }]
requires-python = ">=3.11,<3.15"
license = "MIT"
dependencies = [
    "astropy>=7.0.1,<8",
    "numpy>=2.2.5,<3",
    "pyobs-core>=2.0.0.dev6,<3",
]

[project.optional-dependencies]
gui = [
    "pyobs-core[gui]>=2.0.0.dev6,<3",
    "qasync>=0.28.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0,<27",
    "ruff>=0.9.0",
    "pyrefly>=1.1.1",
    "pre-commit>=4.2.0,<5",
    "cython>=3.0.0,<4",
]

[project.scripts]
sbig-gui = 'pyobs_sbig.gui:main'

[tool.setuptools]
py-modules = []

[tool.scikit-build]
wheel.packages = ["src/pyobs_sbig"]

[build-system]
requires = ["scikit_build_core>=0.12", "cython>=3.0", "cython-cmake", "numpy>=2.0"]
build-backend = "scikit_build_core.build"

[tool.black]
line-length = 120
target-version = ['py313']

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "G"]

[tool.pyrefly]
python-version = "3.11"
ignore-missing-imports = ["PySide6.*", "qasync.*"]
